--- a/jsf22-example01/src/main/webapp/WEB-INF/web.xml
+++ b/jsf22-example01/src/main/webapp/WEB-INF/web.xml
@@ -26,12 +26,12 @@
 
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
-        <param-value>Development</param-value>
+        <param-value>Production</param-value>
     </context-param>
 
     <context-param>
         <param-name>javax.faces.SERIALIZE_SERVER_STATE</param-name>
-        <param-value>true</param-value>
+        <param-value>false</param-value>
     </context-param>
 
     <context-param>
