--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>jsf22-example01</module>
         <module>jsf22-example02</module>
         <module>jsf22-example03</module>
+        <module>jsf22-example04</module>
     </modules>
 
     <build>
