--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>jsf22-cc-empty-attribute</module>
         <module>jsf22-collection-data-model</module>
         <module>jsf22-composite-component-tags</module>
+        <module>jsf22-input-file</module>
         <module>jsf22-resource-dir</module>
         <module>jsf22-view-action</module>
     </modules>
