Updated Mojarra to version 2.2.1

--- a/jsf22-composite-component-tags/pom.xml
+++ b/jsf22-composite-component-tags/pom.xml
@@ -123,7 +123,7 @@
 	
     <properties>
         <myfaces.version>2.2.0-SNAPSHOT</myfaces.version>
-        <mojarra.version>2.2.0-m15</mojarra.version>
+        <mojarra.version>2.2.1</mojarra.version>
         <jetty.version>8.1.10.v20130312</jetty.version>
     </properties>
 </project>
