added HTML5 example

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jsf22-cdi-view-scope</module>
         <module>jsf22-collection-data-model</module>
         <module>jsf22-composite-component-tags</module>
+        <module>jsf22-html5</module>
         <module>jsf22-input-file</module>
         <module>jsf22-resource-dir</module>
         <module>jsf22-reset-values</module>
