--- a/jsf22-flows/pom.xml
+++ b/jsf22-flows/pom.xml
@@ -77,6 +77,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-el_2.2_spec</artifactId>
+            <version>1.0.3</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
@@ -169,7 +176,7 @@
     <properties>
         <myfaces.version>2.2.0-SNAPSHOT</myfaces.version>
         <mojarra.version>2.2.2</mojarra.version>
-        <owb.version>1.1.8</owb.version>
+        <owb.version>1.2.0</owb.version>
         <jetty.version>8.1.10.v20130312</jetty.version>
     </properties>
 </project>
