--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <name>JSFlive - JSF 2.2 Examples</name>
 
     <modules>
+        <module>jsf22-ajaxdelay</module>
         <module>jsf22-cc-empty-attribute</module>
         <module>jsf22-cdi-view-scope</module>
         <module>jsf22-collection-data-model</module>
